--- a/Job Portal System/Areas/JobVacancies/Pages/Details.cshtml
+++ b/Job Portal System/Areas/JobVacancies/Pages/Details.cshtml
@@ -12,7 +12,7 @@
                  aria-valuemin="0" aria-valuemax="100"></div>
         </div>
         <div class="form-container">
-            <div class="form-head">
+            <div class="form-head2">
                 <h1 class="form-head-title">@ViewData["Title"]</h1>
                 <span class="form-head-details @(((JobVacancyStatus) Model.JobVacancy.Status).GetCssClass())">
                     @((JobVacancyStatus) Model.JobVacancy.Status)
@@ -165,7 +165,8 @@
                     {
                         <div class="d-flex">
                             <form method="post" class="ml-auto">
-                                <button asp-page-handler="submit"
+                                <button asp-controller="JobVacancies"
+                                        asp-action="Submit"
                                         asp-route-id="@Model.JobVacancy.Id"
                                         class="btn btn-submit">
                                     Submit
