--- a/Job Portal System/Areas/Resumes/Pages/Details.cshtml
+++ b/Job Portal System/Areas/Resumes/Pages/Details.cshtml
@@ -47,13 +47,13 @@
                                         @if (graduated)
                                         {
                                             <div class="details-container">
-                                                Graduated from <span class="font-weight-little-bold">@education.School.Name</span> (@education.School.City.Name) with <span class="font-weight-little-bold">@((EducationDegree)education.Degree)</span> degree in <span class="font-weight-little-bold">@education.FieldOfStudy.Title</span> (from @education.StartDate.Value.Year to @education.EndDate.Value.Year)
+                                                Graduated from <span class="font-weight-little-bold">@education.School.Name</span> (@education.School.City.Name) with <span class="font-weight-little-bold">@((EducationDegree)education.Degree)</span> degree in <span class="font-weight-little-bold">@education.FieldOfStudy.Title</span> (from @education.StartDate.Year to @education.EndDate.Value.Year)
                                             </div>
                                         }
                                         else
                                         {
                                             <div class="details-container">
-                                                Is studying <span class="font-weight-little-bold">@education.FieldOfStudy.Title</span> in <span class="font-weight-little-bold">@education.School.Name</span> (@education.School.City.Name) to get <span class="font-weight-little-bold">@((EducationDegree)education.Degree)</span> (started from @education.StartDate.Value.Year)
+                                                Is studying <span class="font-weight-little-bold">@education.FieldOfStudy.Title</span> in <span class="font-weight-little-bold">@education.School.Name</span> (@education.School.City.Name) to get <span class="font-weight-little-bold">@((EducationDegree)education.Degree)</span> (started from @education.StartDate.Year)
                                             </div>
                                         }
                                     </div>
@@ -96,7 +96,7 @@
                                         @if (finishedWorking)
                                         {
                                             <div class="details-container">
-                                                Worked as <span class="font-weight-little-bold">@workExperience.JobTitle.Title</span> in <span class="font-weight-little-bold">@workExperience.Company.Name</span> (from @workExperience.StartDate.Value.Year to @workExperience.EndDate.Value.Year)
+                                                Worked as <span class="font-weight-little-bold">@workExperience.JobTitle.Title</span> in <span class="font-weight-little-bold">@workExperience.Company.Name</span> (from @workExperience.StartDate.Year to @workExperience.EndDate.Value.Year)
                                             </div>
                                             if (!string.IsNullOrEmpty(workExperience.Description))
                                             {
@@ -111,7 +111,7 @@
                                         else
                                         {
                                             <div class="details-container">
-                                                Is working as <span class="font-weight-little-bold">@workExperience.JobTitle.Title</span> in <span class="font-weight-little-bold">@workExperience.Company.Name</span> (started from @workExperience.StartDate.Value.Year)
+                                                Is working as <span class="font-weight-little-bold">@workExperience.JobTitle.Title</span> in <span class="font-weight-little-bold">@workExperience.Company.Name</span> (started from @workExperience.StartDate.Year)
                                             </div>
                                             if (!string.IsNullOrEmpty(workExperience.Description))
                                             {
